--- a/public/stylesheet/main.css
+++ b/public/stylesheet/main.css
@@ -1,5 +1,9 @@
 html, body{
-    width: 100%;
-    max-height: 100vh;
+    height: 100%;
     background-color: rgb(128, 128, 128);
+}
+
+Canvas[resize]{
+    width: 100%;
+    height: 100%;
 }
